# polygonial

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
src/: FactsEngine.cpp  FactsEngine.h  InferenceEngine.cpp  InferenceEngine.h  Node.cpp  Node.h  Record.cpp  Record.h  RulesEngine.cpp  RulesEngine.h  UnfilledRecordException.cpp  UnfilledRecordException.h  UnfilledRecordException.hpp
src/cli/: cli.cpp  cli.h
src/core/: FactsEngine.cpp  FactsEngine.h  InferenceEngine.cpp  InferenceEngine.h  Node.cpp  Node.h  Record.h  Record.hpp  RulesEngine.cpp  RulesEngine.h  UnfilledRecordException.hpp
src/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: test-factsengine.cpp  test-inferenceengine.cpp  test-main.cpp  test-node.cpp  test-record.cpp  test-rulesengine.cpp
tests/cli/: test-cli.cpp
tests/core/: test-factsengine.cpp  test-inferenceengine.cpp  test-main.cpp  test-node.cpp  test-record.cpp  test-rulesengine.cpp
